API: Add initial version of global.intent list & grantPermission
