# api/src/httpd/router.ts
@@ -4,6 +4,7 @@ import { authorized } from "../authz";
 import ProjectModel from "../project";
 import UserModel from "../user";
 import { MultichainClient } from "../multichain";
+import { GlobalModel } from "../global/model";
 
 interface SuccessResponse {
   apiVersion: string;
@@ -32,10 +33,116 @@ export const createRouter = (
 ) => {
   const userModel = new UserModel(multichainClient, jwtSecret, rootSecret);
   const projectModel = new ProjectModel(multichainClient);
+  const globalModel = new GlobalModel(multichainClient);
 
   const router = express.Router();
 
   router.get("/health", (req, res) => res.status(200).send("OK"));
+  router.get("/global.intent.list", async (req, res) => {
+    const intent = req.path.substring(1);
+    try {
+      const response = {
+        apiVersion: apiVersion,
+        data: await globalModel.listPermissions(authorized(req.token, intent))
+      };
+      send(res, 201, response);
+    } catch (err) {
+      console.log(err);
+      switch (err.kind) {
+        case "NotAuthorized":
+          console.log(err);
+          send(res, 403, {
+            apiVersion: apiVersion,
+            error: {
+              code: 403,
+              message: `User ${req.token.userId} is not authorized to execute ${intent}`
+            }
+          });
+          break;
+        case "UserAlreadyExists":
+          console.log(err);
+          send(res, 409, {
+            apiVersion: apiVersion,
+            error: { code: 409, message: `The user already exists.` }
+          });
+          break;
+        case "ParseError":
+          console.log(err);
+          send(res, 400, {
+            apiVersion: apiVersion,
+            error: { code: 400, message: `Missing keys: ${err.badKeys.join(", ")}` }
+          });
+          break;
+        default:
+          console.log(err);
+          send(res, 500, {
+            apiVersion: apiVersion,
+            error: { code: 500, message: "INTERNAL SERVER ERROR" }
+          });
+      }
+    }
+  });
+
+  router.post("/global.intent.grantPermission", async (req, res) => {
+    const { body, path } = req;
+    const intent = path.substring(1);
+
+    if (body.apiVersion !== apiVersion) {
+      send(res, 412, {
+        apiVersion: req.body.apiVersion,
+        error: { code: 412, message: `API version ${body.apiVersion} not implemented.` }
+      });
+      return;
+    }
+    if (!body.data) {
+      send(res, 400, {
+        apiVersion: req.body.apiVersion,
+        error: { code: 400, message: `Expected "data" in body.` }
+      });
+      return;
+    }
+    try{
+    const response = {
+      apiVersion: apiVersion,
+      data: await globalModel.grantPermissions(body.data, authorized(req.token, intent))
+    };
+    send(res, 201, response);
+  } catch (err) {
+    console.log(err);
+    switch (err.kind) {
+      case "NotAuthorized":
+        console.log(err);
+        send(res, 403, {
+          apiVersion: apiVersion,
+          error: {
+            code: 403,
+            message: `User ${req.token.userId} is not authorized to execute ${intent}`
+          }
+        });
+        break;
+      case "UserAlreadyExists":
+        console.log(err);
+        send(res, 409, {
+          apiVersion: apiVersion,
+          error: { code: 409, message: `The user already exists.` }
+        });
+        break;
+      case "ParseError":
+        console.log(err);
+        send(res, 400, {
+          apiVersion: apiVersion,
+          error: { code: 400, message: `Missing keys: ${err.badKeys.join(", ")}` }
+        });
+        break;
+      default:
+        console.log(err);
+        send(res, 500, {
+          apiVersion: apiVersion,
+          error: { code: 500, message: "INTERNAL SERVER ERROR" }
+        });
+    }
+
+  });
 
   router.post("/user.create", async (req, res) => {
     console.log(`req.user: ${JSON.stringify(req.user)}`);
